Index page links to published content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </style>
 </head>
 <body>
-<h1>Sample test-io main page</h1>
-<p>Got the gh-pages branch working.</p>
+<h1>Testing Matlab documentation publishing</h1>
+<p>This is a general landing page that contains links to the Matlab-published files. In the future, test autogenerating this main page as well (index.m?).</p>
+<h2>Scripts</h2>
+<p>
+<a href="html/script1.html">script1</a>
+</p>
 </body>
 </html>
